@@ -69,13 +69,15 @@ if ($lastexpire < $needtoexpire){
 	if you run this via cron, you will get nothing. We will use the setting for lotgdnet, even if not used.
 	$_SERVER['SERVER_NAME'].($_SERVER['SERVER_PORT']==80?"":":".$_SERVER['SERVER_PORT']).$_SERVER['SCRIPT_NAME']." is about to expire.  If you wish to keep this character, you should log on to him or her soon!",
 	*/
-	
-	$mheader  = 'MIME-Version: 1.0' . "\r\n";
-	$mheader .= 'Content-type: text/plain; charset='.getsetting('charset','ISO-8859-1'). "\r\n";
-	$mheader .= 'From: '.getsetting("gameadminemail","postmaster@localhost")."\r\n";
+
+	require_once("lib/sendmail.php");
 	$collector=array();
+	$from_array=array(getsetting("gameadminemail","postmaster@localhost")=>getsetting("gameadminemail","postmaster@localhost"));
+	$cc_array=array();
 	while ($row = db_fetch_assoc($result)) {
-		mail($row['emailaddress'],$subject,str_replace("{charname}",$row['login'],$message),$mheader);
+		$to_array=array($row['emailaddress']=>$row['emailaddress']);
+		$body=str_replace("{charname}",$row['login']);
+		$mail_sent = send_email($to_array,$body,$subject,$from_array,$cc_array,"text/html");
 		$collector[]=$row['acctid'];
 	}
 	if ($collector!=array()) {
